footer section added here

--- a/style.css
+++ b/style.css
@@ -26,15 +26,27 @@ img {
   height: auto;
 }
 
-.flex-space-around{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.flex-space-around {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-
+.btn {
+  border: none;
+  padding: var(--padding);
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: var(--transition);
+}
+.btn:hover {
+  background-color: var(--secondary-color);
+}
 /* reset code and common css starts there */
 
 /* navbar starts there */
+#menu-icon{
+  display: none;
+}
 nav {
   font-family: fantasy;
   font-size: 1.2em;
@@ -45,67 +57,90 @@ nav {
   z-index: 100;
 }
 
-.nav-upper{
-    min-height: 10vh;
-    background-color: var(--primary-color);
-    padding: 1em 0;
+.nav-upper {
+  min-height: 10vh;
+  background-color: var(--primary-color);
+  padding: 1em 0;
 }
 
-.nav__list{
-    transition: var(--transition);
+.nav__list {
+  transition: var(--transition);
 }
-.nav__list:hover{
-    text-decoration: overline;
-    color: #000000;
-}
-
-.nav__link{
-    color: #ffffff;
-    transition: var(--transition);
-}
-.nav__link:hover{
-    color: #000000;
-
+.nav__list:hover {
+  text-decoration: overline;
+  color: #000000;
 }
 
-.profile-icon{
-    width: 3em;
-    height: 3em;
-    border-radius: 50%;
-    border: 2px solid #ffffff;
-    filter: saturate(0);
-    transition: var(--transition);
+.nav__link {
+  color: #ffffff;
+  transition: var(--transition);
 }
-.profile-icon:hover{
-    filter: saturate(1);
+.nav__link:hover {
+  color: #000000;
 }
 
-.nav-lower{
-    min-height: 10vh;
-    background-color: var(--secondary-color);
-    font-weight: bolder;
+.profile-icon {
+  width: 3em;
+  height: 3em;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  filter: saturate(0);
+  transition: var(--transition);
+}
+.profile-icon:hover {
+  filter: saturate(1);
 }
 
-.nav__brand{
-    font-size: 2em;
+.nav-lower {
+  min-height: 10vh;
+  background-color: var(--secondary-color);
+  font-weight: bolder;
+}
+
+.nav__brand {
+  font-size: 2em;
 }
 /* navbar starts there */
 
+/* footer starts here */
+.footer {
+  padding: 1em;
+  background-color: var(--primary-color);
+  min-height: 10vh;
+  color: #ffffff;
+  font-size: 1.1rem;
+}
+.btn-subscribe {
+  margin-left: -5px;
+}
+.footer__input {
+  border: none;
+  padding: var(--padding);
+  width: 20rem;
+}
+/* footer ends here */
+
 /* navbar responsive starts there */
 @media (max-width: 992px) {
-    .flex-space-around{
-        flex-direction: column;
-        gap: 1em;
-        padding: 1em o;
-    }
+  .flex-space-around {
+    flex-direction: column;
+    gap: 1em;
+    padding: 1em o;
+  }
+  #menu-icon{
+    display: block;
+    text-align: center;
+    margin: 1rem 0;
+    cursor: pointer;
+  }
+  .hidden{
+    display: none;
+  }
 }
 @media (max-width: 768px) {
-    
 }
 @media (max-width: 600px) {
-    
 }
 @media (max-width: 992px) {
-    
 }
 /* navbar responsive starts there */
